# Legion

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  clang_complete.in
src/Camera/: BasicCamera.cpp  Camera.cpp  IBasicCamera.cpp  ThinLensCamera.cpp
src/Core/: APIBase.cpp  Context.cpp  ContextImpl.cpp  ContextImpl.hpp  Light.hpp
src/Engine/: ContextImpl.cpp  Engine.cpp  PrimaryRayGenerator.cpp  PrimaryRayGenerator.hpp  RayServer.hpp
src/Film/: IFilm.cpp  ImageFilm.cpp
src/Legion/: CMakeLists.txt  Legion.hpp
src/Legion/Common/Math/: Filter.hpp  Math.cpp  Math.hpp  Matrix.hpp  ONB.hpp  QMC.hpp  Sobol.cpp  Sobol.hpp  Vector.hpp
src/Legion/Common/Util/: Assert.hpp  AutoTimerHelpers.hpp  CUDAFactory.hpp  Factory.cpp  Factory.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  Noncopyable.hpp  Optix.cpp  Optix.hpp  Parameters.cpp  Parameters.hpp  Plugin.cpp  Plugin.hpp  Preprocessor.hpp  Singleton.hpp  Stream.cpp  Stream.hpp  Timer.cpp  Timer.hpp  TypeConversion.cpp  TypeConversion.hpp  Util.hpp
src/Legion/Core/: APIBase.cpp  APIBase.hpp  Color.hpp  Context.cpp  Context.hpp  ContextImpl.cpp  ContextImpl.hpp  Declarations.hpp  Exception.cpp  Exception.hpp  Light.hpp  Matrix.hpp  PluginContext.cpp  PluginContext.hpp  Ray.hpp  VariableContainer.cpp  VariableContainer.hpp  Vector.hpp  config.hpp.in
src/Legion/Cuda/: Shared.hpp  hit_programs.cu  ray_generation.cu  triangle_mesh.cu
src/Legion/Objects/: IObject.cpp  IObject.hpp  VariableContainer.cpp  VariableContainer.hpp  cuda_common.hpp
src/Legion/Objects/Camera/: ICamera.hpp  ThinLens.cpp  ThinLens.hpp
src/Legion/Objects/Display/: IDisplay.hpp  ImageFileDisplay.cpp  ImageFileDisplay.hpp
src/Legion/Objects/Environment/: ConstantEnvironment.cpp  ConstantEnvironment.hpp  IEnvironment.hpp
src/Legion/Objects/Film/: Film.hpp  IFilm.cpp  IFilm.hpp  ImageFilm.cpp  ImageFilm.hpp
src/Legion/Objects/Geometry/: IGeometry.hpp  Parallelogram.cpp  Parallelogram.hpp  Sphere.cpp  Sphere.hpp  TriMesh.cpp  TriMesh.hpp
src/Legion/Objects/Light/: ILight.hpp  PointLight.cpp  PointLight.hpp
src/Legion/Objects/LightShader/: DiffuseLight.cpp  DiffuseLight.hpp  ILightShader.cpp  MeshLight.cpp  MeshLight.hpp  PointLightShader.cpp  PointLightShader.hpp
src/Legion/Objects/Mesh/: Mesh.cpp  Mesh.hpp
src/Legion/Objects/Renderer/: IRenderer.hpp  ProgressiveRenderer.cpp  ProgressiveRenderer.hpp
src/Legion/Objects/Surface/: Beckmann.cpp  Beckmann.hpp  Dielectric.cpp  Dielectric.hpp  DiffuseEmitter.cpp  DiffuseEmitter.hpp  Glossy.cpp  Glossy.hpp  ISurface.cpp  ISurface.hpp  Lambertian.cpp  Lambertian.hpp  Metal.cpp  Metal.hpp  Mixture.cpp  Mixture.hpp  MixtureSurface.hpp  Ward.cpp  Ward.hpp
src/Legion/Objects/Texture/: CheckerTexture.cpp  CheckerTexture.hpp  ConstantTexture.cpp  ConstantTexture.hpp  FresnelSchlickTexture.cpp  FresnelSchlickTexture.hpp  ITexture.cpp  ITexture.hpp  ImageTexture.cpp  ImageTexture.hpp  PerlinTexture.cpp  PerlinTexture.hpp  ProceduralTexture.hpp
src/Legion/RayTracer/: Optix.cpp  Optix.hpp  RayTracer.cpp  RayTracer.hpp
src/Legion/RayTracer/Cuda/: Shared.hpp  hit.cu  raygen.cu  trimesh.cu
src/Legion/Renderer/: CUDAProgramManager.cpp  CUDAProgramManager.hpp  LightSet.cpp  LightSet.hpp  OptiXProgramManager.cpp  OptiXProgramManager.hpp  OptiXScene.cpp  OptiXScene.hpp  RayQueue.cpp  RayQueue.hpp  RayScheduler.cpp  RayScheduler.hpp  RayServer.cpp  RayServer.hpp  RayTracer.cpp  RayTracer.hpp  Renderer.cpp  Renderer.hpp  ShadingEngine.cpp  ShadingEngine.hpp  sobol_matrices.hpp
src/Legion/Renderer/Cuda/: Shared.hpp  hit.cu  raygen.cu  trimesh.cu
src/Legion/Scene/: ISceneObject.hpp
src/Legion/Scene/Camera/: BasicCamera.cpp  BasicCamera.hpp  IBasicCamera.cpp  IBasicCamera.hpp  ICamera.cpp  ICamera.hpp  ThinLens.cpp  ThinLens.hpp  ThinLensCamera.cpp  ThinLensCamera.hpp
src/Legion/Scene/Film/: Film.hpp  IFilm.cpp  IFilm.hpp  ImageFilm.cpp  ImageFilm.hpp
src/Legion/Scene/Geometry/: IGeometry.hpp  Sphere.cpp  Sphere.hpp  TriMesh.cpp  TriMesh.hpp
src/Legion/Scene/Light/: ILight.hpp  PointLight.cpp  PointLight.hpp
src/Legion/Scene/LightShader/: DiffuseLight.cpp  DiffuseLight.hpp  ILightShader.cpp  ILightShader.hpp  MeshLight.cpp  MeshLight.hpp  PointLightShader.cpp  PointLightShader.hpp  PointLightshader.hpp
src/Legion/Scene/Mesh/: Mesh.cpp  Mesh.hpp
src/Legion/Scene/Surface/: ISurface.cpp  ISurface.hpp  Lambertian.cpp  Lambertian.hpp
src/Legion/Scene/SurfaceShader/: ISurfaceShader.cpp  ISurfaceShader.hpp  Lambertian.cpp  Lambertian.hpp  LambertianShader.cpp  LambertianShader.hpp
src/LightShader/: ILightShader.cpp  PointLightShader.cpp
src/Mesh/: Mesh.cpp
src/Scene/Camera/: BasicCamera.cpp  ICamera.cpp  ThinLensCamera.cpp  ThinLensCamera.hpp
src/Scene/Film/: Film.hpp  ImageFilm.cpp
src/Scene/LightShader/: PointLightShader.cpp  PointLightshader.hpp
src/Scene/Mesh/: Mesh.cpp
src/Scene/SurfaceShader/: ISurfaceShader.cpp  LambertianShader.cpp  LambertianShader.hpp
src/Shader/: IShader.cpp  LambertianShader.cpp
src/Standalone/: CMakeLists.txt  cornell.cpp  galileo_ward.cpp  simple.cpp  sphere.cpp  spheres.cpp  teapot.cpp  texture.cpp  ward.cpp  white.cpp
src/Standalone/LegionBlend/: NodeTree.py  __init__.py  export_legion.py
src/Standalone/data/: grid1.exr
src/Standalone/lr/: CMakeLists.txt
src/Standalone/lr/scenes/: beckmann.xml  dielectric.xml  metal.xml  simple.xml  ward.xml
src/Standalone/lr/src/: Util.cpp  Util.hpp  XMLToLegion.cpp  XMLToLegion.hpp  lr.cpp  lrgui.cpp
src/Support/: CMakeLists.txt
src/Support/ilmbase-2.0.1/: CMakeLists.txt
src/Support/ilmbase-2.0.1/Half/: CMakeLists.txt
src/Support/ilmbase-2.0.1/Imath/: Makefile.in
src/Support/ilmbase-2.0.1/config/: IlmBaseConfig.h
src/Support/openexr-2.0.1/: CMakeLists.txt
src/Support/openexr-2.0.1/IlmImf/: CMakeLists.txt  ImfNamespace.h  Makefile.in
src/Support/zlib-1.2.8/: CMakeLists.txt
src/SurfaceShader/: LambertianShader.cpp
src/Test/: CMakeLists.txt
src/Test/Regression/: legion_regress.py
src/Test/Unit/: CMakeLists.txt  unit_image.cpp  unit_vector.cpp
src/Util/: Stream.cpp
(+642 files in other folders)
