
add_executable( simple simple.cpp)
target_link_libraries( simple legion )

add_executable( galileo_ward galileo_ward.cpp)
target_link_libraries( galileo_ward legion )

#add_executable( sphere sphere.cpp )
#target_link_libraries( sphere legion)


#add_executable( spheres spheres.cpp )
#target_link_libraries( spheres legion)

#add_executable( cornell cornell.cpp )
#target_link_libraries( cornell legion)
