
add_executable( simple simple.cpp)
target_link_libraries( simple legion )

add_executable( ward ward.cpp)
target_link_libraries( ward legion )

#add_executable( sphere sphere.cpp )
#target_link_libraries( sphere legion)


#add_executable( spheres spheres.cpp )
#target_link_libraries( spheres legion)

#add_executable( cornell cornell.cpp )
#target_link_libraries( cornell legion)
